# pl_performance

./: .gitignore  README.md  pl_performance.code-workspace  results.md
PerfHaskell/: .ghci  ChangeLog.md  PerfHaskell.cabal  README.md  package.yaml
PerfHaskell/app/: Main.hs
PerfHaskell/src/: Lib.hs
PerfHaskell/test/: Spec.hs
perf_bash_curl/: perf.sh
perf_js/: main.js  package-lock.json  package.json
perf_kt/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
perf_kt/common/src/main/kotlin/ro/jtonic/common/: Common.kt
perf_kt/http4kc/: build.gradle.kts
perf_kt/http4kc/src/main/kotlin/ro/jtonic/http4kc/: App.kt
perf_kt/http4kc/src/main/resources/: logback.xml
perf_kt/ktorc/: build.gradle.kts
perf_kt/ktorc/src/main/kotlin/ro/jtonic/ktorc/: App.kt
perf_kt/ktors/: build.gradle.kts
perf_kt/ktors/src/main/kotlin/ro/jtonic/ktors/: App.kt
perf_kt/ktors/src/main/resources/: application.conf
perf_kt/ktors/src/test/kotlin/ro/jtonic/ktors/: AppTest.kt
perf_python/: perf_asyncio.py  perf_request_sync_.py  perf_request_sync_with_session.py  perf_request_tp_with_queue.py  perf_request_tpe.py
perf_rust/: Cargo.toml
perf_rust/src/: main.rs
perf_scala/: build.sbt
perf_scala/src/main/scala/example/: PerfScala.scala
