[package]
name = "perf_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.7", features = ["blocking"] }
log = "0.4.14"
env_logger = "0.9.0"
time = "0.3.5"
chrono = "0.4.19"
